# sdmmc-protocol

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/dwmmc-host/: Cargo.toml  README.md
crates/dwmmc-host/src/: command.rs  data.rs  dma.rs  host.rs  lib.rs  regs.rs
crates/sdhci-host/: Cargo.toml  README.md
crates/sdhci-host/src/: command.rs  data.rs  dma.rs  host.rs  lib.rs  regs.rs
docs/: sdhci-usage.md  spi-vs-sdio.md
docs/comparison/: dwmmc-host-vs-simple-sdmmc.md  sdhci-host-vs-drivercraft-sdmmc.md
docs/superpowers/plans/: 2026-04-29-spi-usability.md
docs/superpowers/specs/: 2026-04-29-spi-usability-design.md
examples/: qemu_sdhci.rs  qemu_smoke.rs  qemu_spi.rs
qemu/: riscv64-virt.ld
scripts/: qemu-sdhci.sh  qemu-smoke.sh  qemu-spi.sh
scripts/src/: cmd.rs  response.rs  sdio.rs
src/: cmd.rs  diag.rs  error.rs  ext_csd.rs  lib.rs  response.rs  sdio.rs  spi.rs
