[package]
name = "sdmmc-protocol"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "no_std SD/MMC protocol building blocks for embedded systems"
readme = "README.md"
keywords = ["sd", "mmc", "sdio", "embedded", "no_std"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
bitflags = "2"
embedded-hal = "1"
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[features]
default = ["spi"]
spi = []
sdio = []
defmt = ["dep:defmt"]
log = ["dep:log"]
