[package]
name = "dwmmc-host"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Synopsys DesignWare Mobile Storage Host Controller backend for sdmmc-protocol (no_std, PIO)"
repository = "https://github.com/YanLien/sdmmc-protocol"
readme = "README.md"
keywords = ["sd", "mmc", "dwmmc", "embedded", "no_std"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
sdmmc-protocol = { path = "../..", default-features = false, features = ["sdio"] }
embedded-hal = "1"
bitfield-struct = "0.11"
volatile = { version = "0.6", features = ["derive"] }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[features]
default = []
log = ["dep:log", "sdmmc-protocol/log"]
defmt = ["dep:defmt", "sdmmc-protocol/defmt"]
