[package]
name = "sdhci-host"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "SDHCI host controller backend for sdmmc-protocol (no_std, PIO)"
repository = "https://github.com/YanLien/sdmmc-protocol"
readme = "README.md"
keywords = ["sd", "sdhci", "embedded", "no_std"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
sdmmc-protocol = { path = "../..", default-features = false, features = ["sdio"] }
embedded-hal = "1"
log = "0.4"
